styles/styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  font-family: "Roboto", sans-serif;
}

.navbar {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 1%;
  position: fixed;
  color: white;
  text-shadow: 1px 0 black, -1px 0 black, 0 1px black, 0 -1px black;
}

.navbar h1 {
  font-size: 28px;
}

.navigation {
  width: 30%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.cart-profile {
  width: 5%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.navbar a {
  color: white;
  text-decoration: none;
  font-size: larger;
  transition: 0.5s ease-in;
}

.navbar a:hover {
  transform: scale(120%);
}

.navbar a:visited {
  color: white;
}

.landing {
  background: url("../images/landing.jpg");
  width: 100%;
  height: 100%;
  background-attachment: fixed;
  background-size: cover;
}

.about-us {
  width: 100%;
  height: 80%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.about-us h1 {
  margin-bottom: 2%;
  color: #212529;
}

.about-us p {
  text-align: center;
  width: 70%;
  font-size: larger;
  font-weight: lighter;
  text-shadow: 0 0 1px black;
}

#about-products {
  display: flex;
  flex-direction: column;
  justify-self: space-between;
}

#about-products img {
  width: 40%;
  border-radius: 2px;
}

.best-seller {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 10%;
}

.set {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 10%;
}

.about-products-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.about-products-description h2 {
  font-size: 28px;
  width: 80%;
  text-align: center;
  margin-bottom: 3%;
  color: #212529;
}

.about-products-description p {
  font-size: larger;
  font-weight: lighter;
  text-shadow: 0 0 1px black;
  width: 80%;
  text-align: center;
}

#greeting {
  text-align: center;
  margin-bottom: 5%;
}

#products {
  margin-bottom: 10%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: stretch;
  gap: 50px;
}

.product-card {
  width: 300px;
  /* height: 300px; */
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  border-radius: 2px;
  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
  /* border: 1px solid rgba(0, 0, 0, 0.5); */
}

.product-image {
  width: 100%;
  height: 250px;
  object-fit: cover;
}

.card-description {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 2%;
}

.product-title {
  color: #212529;
}

.product-description {
  width: 100%;
  font-weight: lighter;
}

.product-price {
  font-weight: bolder;
}

.addToCart {
  width: 80%;
  color: black;
  background: transparent;
  border: 1px solid black;
  font-size: larger;
  margin-top: 5%;
  transition: 0.2s ease-in;
}

.addToCart:hover {
  color: white;
  background: black;
}

#create-product-modal {
  display: none;
}

#create-product-modal.active {
  display: block;
  position: fixed;
  top: 40%;
  left: 18%;
  background: rgba(0, 0, 0, 0.3);
}

/* SO THAT THE IMAGE WON'T APPEAR WHEN SELECTED FOR ADDING A PRODUCT */
.addImage {
  display: none;
}

/* CONTACT FORM */
.contact-filter {
  width: 100%;
  height: 100%;
  background: grey;
  position: absolute;
  background: url("../images/landing.jpg");
  background-size: cover;
  background-position: bottom;
  background-attachment: fixed;
}

#contact {
  display: grid;
  place-items: center;
  background: transparent;
  height: 100%;
  position: relative;
  transition: 0.3s ease-in;
}

#contact.blur {
  backdrop-filter: blur(7px);
  -webkit-backdrop-filter: blur(7px);
}

.contact-form {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  width: 40%;
  height: 80%;
  background: rgba(0, 0, 0, 0.8);
  border-radius: 3px;
  box-shadow: 0 0 3px black;
  transition: 0.2s ease-in;
  font-size: larger;
}

.contact-form input {
  width: 40%;
  height: 10%;
  color: white;
  background: transparent;
  border: none;
  border-bottom: 1px solid white;
}

.contact-form input:focus {
  outline: none;
  border: none;
  border-bottom: 1px solid white;
}

#contact-button {
  width: 30%;
  height: 10%;
  color: white;
  background: black;
  border: 1px solid white;
  transition: 0.3s ease-in;
  font-size: 15px;
}

#contact-button:hover {
  color: black;
  background: white;
}

/* FOOTER */
#footer {
  background: black;
  color: white;
  width: 100%;
  height: 7%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-shadow: 0 0 2px white;
}

